--- a/myapp/package.json
+++ b/myapp/package.json
@@ -10,6 +10,7 @@
     "angular-animate": "^1.5.9",
     "angular-aria": "^1.5.9",
     "angular-cookies": "^1.5.9",
+    "angular-jk-carousel": "^0.1.7",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.9",
     "angular-ui-router": "^0.3.2",
